- hot fix for track knob on mobile devices

--- a/src/app/themes/volumio/volumio-style.scss
+++ b/src/app/themes/volumio/volumio-style.scss
@@ -434,9 +434,13 @@ li.list-group-item {
 //Knob
 .knobWrapper {
   position: relative;
+  margin: 0px auto 15px auto;
   width: 210px;
   height: 210px;
-  margin: 0px auto 15px auto;
+  @include breakpoint(xs) {
+    width: 186px;
+    height: 186px;
+  }
 }
 
 .knob {
